--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,15 @@
   --font-IRANYekanXNoEn: var(--font-IRANYekanXNoEn);
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 /* left to right style */
 .ltr {
   direction: ltr !important;
@@ -84,3 +93,52 @@
     left: 150%;
   }
 }
+
+
+/* marquee */
+
+.container {
+  width: 100%;
+  overflow-x: hidden;
+  max-width: 1536px;
+  height: auto;
+  mask-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1) 20%,
+    rgba(0, 0, 0, 1) 80%,
+    rgba(0, 0, 0, 0)
+  );
+}
+
+.itemLeft,
+.itemRight {
+  width: max-content;
+  height: max-content;
+  position: absolute;
+  animation: 30s linear infinite;
+}
+
+.itemLeft {
+  left: 1600px;
+  animation-name: sLeft;
+}
+.itemRight {
+  right: 1600px;
+  animation-name: sRight;
+}
+
+@keyframes sLeft {
+  to {left: -200px;}}
+
+@keyframes sRight {
+  to {right: -200px;}}
+
+.item1 {animation-delay: -26.25s;}
+.item2 {animation-delay: -22.5s;}
+.item3 {animation-delay: -18.75s;}
+.item4 {animation-delay: -15s;}
+.item5 {animation-delay: -11.25s;}
+.item6 {animation-delay: -7.5s;}
+.item7 {animation-delay: -3.75s;}
+.item8 {animation-delay: 0s;}
